syntax = "proto3";
package desmos.profiles.v3;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/desmos-labs/desmos/v6/x/profiles/types";

// QueryProfileRequest is the request type for the Query/Profile RPC method.
message QueryProfileRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // Address or DTag of the user to query the profile for
  string user = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// QueryProfileResponse is the response type for the Query/Profile RPC method.
message QueryProfileResponse {
  google.protobuf.Any profile = 1
      [ (cosmos_proto.accepts_interface) = "cosmos.auth.v1beta1.AccountI" ];
}